--- a/avalur_cv.tex
+++ b/avalur_cv.tex
@@ -39,14 +39,6 @@
 \hrule
 \vspace{1.0em}
 
-\ifdetailed
-\noindent {\textbf{Цель}}: работать в стабильной IT-компании старшим аналитиком, руководителем группы аналитиков или менеджером технических проектов. Предпочитаю работать в интернет-проектах или образовании, но открыт для других возможностей и задач.
-\else
-\noindent {\textbf{Цель}}: старший аналитик или руководитель группы аналитиков.
-\fi
-
-\vspace{1em}
-
 \noindent {\textbf{Опыт работы}}
 \begin{longtable} {l | p{0.85\textwidth}}
 
@@ -55,8 +47,8 @@
 & \vspace{-1em}
 \begin{itemize}
 	\item реализовал ежедневный расчет поатрибутной (публикуемость, название, адрес, время работы...) метрики точности базы организаций Яндекса.
-	\item автоматизировал, оптимизировал и поддерживал процессы актуализации данных в колл-центрах и в Толоке. В частности, на 20\% улучшил эффективность актуализации, применив catboost для предсказания вероятности закрытия организации.
-	\item дважды повысил точность организаций Справочника на 2-3\%, выделив из потерь наиболее крупные проблемы и исправив их. Во-первых, это <<контур недозвонов>> из компаний с недоступными телефонами. Во-вторых, повысил точность времени работы организаций на 5\% за счет приоритетной актуализации найденных проблемных срезов базы.
+	\item автоматизировал, оптимизировал и поддерживал процессы актуализации данных в колл-центрах и в \href{https://toloka.yandex.ru}{Яндекс.Толоке}. В частности, на 20\% улучшил эффективность актуализации, применив catboost для предсказания вероятности закрытия организации.
+	\item дважды повысил точность организаций Справочника на 2\% и 3\%, выделив из потерь наиболее крупные проблемы и исправив их. Во-первых, исправив компании с недоступными телефонами. Во-вторых, повышение точности времени работы организаций приоритетной актуализацией.
 \end{itemize}
 \\
 \else
@@ -70,7 +62,7 @@
 & \vspace{-1em}
 \begin{itemize}
 	\item запустил филиал ШАД в Новосибирске. C 2016 по 2018 гг. в сумме 16 выпускников.
-	\item в 2017 г в сотрудничестве с компанией Jetbrains расширили филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}.
+	\item в 2017 г в сотрудничестве с компанией JetBrains расширили филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}.
 \end{itemize}
 \\
 \else
@@ -116,7 +108,7 @@
 	\item machine learning (catboost, SVM, RF)
 	\item алгоритмы, структуры данных
 	\item математика (матстат, анализ, алгебра)
-	\item русский: родной, английский: intermediate, французский: base
+	\item русский: родной, английский: intermediate, французский: débutant
 \end{itemize}
 \\
 \end{longtable}
@@ -125,12 +117,12 @@
 \vspace{-2em}
 
 \ifdetailed
-\noindent {\textbf{Образование}}
-\begin{longtable} {c|p{0.4\textwidth}|p{0.25\textwidth}|l} 
-2013 — 2016	& \href{https://yandexdataschool.ru/about/graduates/yearbook/2016}{Школа анализа данных, Яндекс} & IT & выпускник \\
-2009 — 2014	& \href{http://www.ict.nsc.ru/ru/education/postgraduate}{аспирантура ИВТ СО РАН} & мат.методы & к.ф.-м.н \\
-2003 — 2009	& \href{}{НГУ, механико-математический факультет} & математика & магистр \\
-2017	& Programming Languages, parts A, B, C. & Coursera, \newline University of Washington & 	сертификат \\
+\noindent {\textbf{Образование \vspace{-0.5em}}}
+\begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l} 
+2017	& Coursera, University of Washington & Programming Languages, parts A, B, C & 	сертификат \vspace{0.5em}\\
+2013 — 2016	& \href{https://yandexdataschool.ru/about/graduates/yearbook/2016}{Школа анализа данных, Яндекс} & программирование, машинное обучение & выпускник \vspace{0.5em}\\
+2009 — 2014	& \href{http://www.ict.nsc.ru/ru/education/postgraduate}{аспирантура ИВТ СО РАН} & мат.методы & к.ф.-м.н \vspace{0.5em}\\
+2003 — 2009	& \href{}{НГУ, механико-математический факультет} & математика & магистр \vspace{0.5em}\\
 \end{longtable}
 \fi
 
