Minor font fixes.

--- a/avalur_cv.tex
+++ b/avalur_cv.tex
@@ -28,7 +28,7 @@
 
 \begin{document}
 
-\noindent {\sffamily{\Huge{\textbf{   Александр Авдюшенко   }}}}%
+\noindent {\Huge{\textbf{   Александр Авдюшенко   }}}%
 
 \vspace{0.5em}
 
@@ -42,7 +42,7 @@
 \noindent {\textbf{Опыт работы}}
 \begin{longtable} {l | p{0.85\textwidth}}
 
-2015 — н.в. & {\textbf{\href{https://yandex.ru/sprav/main}{Яндекс.Справочник}, аналитик}} \\
+2015 — 2018 & {\textbf{\href{https://yandex.ru/sprav/main}{Яндекс.Справочник}, аналитик}} \\
 \ifdetailed
 & \vspace{-1em}
 \begin{itemize}
