--- a/avalur_cv.tex
+++ b/avalur_cv.tex
@@ -46,14 +46,13 @@
 \ifdetailed
 & \vspace{-1em}
 \begin{itemize}
-	\item реализовал ежедневный расчет поатрибутной (публикуемость, название, адрес, время работы...) метрики точности базы организаций Яндекса.
-	\item автоматизировал, оптимизировал и поддерживал процессы актуализации данных в колл-центрах и в \href{https://toloka.yandex.ru}{Яндекс.Толоке}. В частности, на 20\% улучшил эффективность актуализации, применив catboost для предсказания вероятности закрытия организации.
-	\item дважды повысил точность организаций Справочника на 2\% и 3\%, выделив из потерь наиболее крупные проблемы и исправив их. Во-первых, исправив компании с недоступными телефонами. Во-вторых, повышение точности времени работы организаций приоритетной актуализацией.
+	\item реализовал ежедневный расчет поатрибутной (публикуемость, название, адрес, время работы...) метрики точности базы организаций Яндекса
+	\item автоматизировал и оптимизировал процессы актуализации данных в колл-центрах и в \href{https://toloka.yandex.ru}{Яндекс.Толоке}. В частности, на 20\% улучшил эффективность актуализации, применив catboost для предсказания вероятности закрытия организации
+	\item дважды повысил точность организаций Справочника на 2\% и 3\%, выделив из потерь наиболее крупные проблемы и исправив их. Во-первых, исправив компании с недоступными телефонами. Во-вторых, повысив точность времени работы организаций их приоритетной актуализацией
 \end{itemize}
 \\
 \else
-& \vspace{-1em} {Дважды повысил точность организаций Справочника на 2-3\%. Автоматизировал, оптимизировал и поддерживал процессы актуализации данных
-в колл-центрах и в Толоке. Работа в группе из 6 человек, разработка на Java, SQL, Python, немного catboost и С++.} \\
+& \vspace{-1em} {Дважды повысил точность организаций Справочника на 2\% и 3\%. Автоматизировал и оптимизировал процессы актуализации данных в колл-центрах и в Толоке. Работа в группе из 6 человек, разработка на Java, SQL, Python, немного С++; catboost.} \\
 \fi
 
 
@@ -61,12 +60,12 @@
 \ifdetailed
 & \vspace{-1em}
 \begin{itemize}
-	\item запустил филиал ШАД в Новосибирске. C 2016 по 2018 гг. в сумме 16 выпускников.
-	\item в 2017 г в сотрудничестве с компанией JetBrains расширили филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}.
+	\item запустил филиал ШАД в Новосибирске. C 2016 по 2018 гг. в сумме 16 выпускников
+	\item в 2017 г в сотрудничестве с компанией JetBrains расширил филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}
 \end{itemize}
 \\
 \else
-& \vspace{-1em} {В 2013 г запустил филиал ШАД в Новосибирске (с 2016 по 2018 гг. в сумме 16 выпускников). В 2017 г в сотрудничестве с компанией Jetbrains расширили филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}}. \\
+& \vspace{-1em} {В 2013 запустил филиал ШАД в Новосибирске (с 2016 по 2018 гг. в сумме 16 выпускников). В 2017 в сотрудничестве с компанией Jetbrains расширил филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}.} \\
 \fi
 
 
@@ -74,10 +73,10 @@
 \ifdetailed
 & \vspace{-1em}
 \begin{itemize}
-	\item обобщил на нестационарную геометрию метод решения трехмерных уравнений Рейнольдса движения несжимаемой жидкости.
-	\item ускорил расчеты в 16 раз, распараллелив алгоритм по блокам расчетной области с использованием MPI для процессов с распределенной памятью (улучшение имеющегося в лаборатории комплекса программ на языке Fortran, $\sim$30 тыс. строк кода).
-	\item ускорил ещё в 7 раз, распараллелив алгоритм в одном блоке с использованием OpenMP-потоков с общей памятью.
-	\item опубликовал 19 научных работ (4 статьи, 13 тезисов, 2 патента), защитив в итоге кандидатскую <<Новые численные модели гидродинамики турбомашин>>.
+	\item обобщил на нестационарную геометрию метод решения трехмерных уравнений Рейнольдса движения несжимаемой жидкости
+	\item ускорил расчеты в 16 раз, распараллелив алгоритм по блокам расчетной области с использованием MPI для процессов с распределенной памятью (улучшение имеющегося в лаборатории комплекса программ на языке Fortran, $\sim$30 тыс. строк кода)
+	\item ускорил ещё в 7 раз, распараллелив алгоритм в одном блоке с использованием OpenMP-потоков с общей памятью
+	\item опубликовал 19 научных работ (4 статьи, 13 тезисов, 2 патента), защитив в итоге кандидатскую <<Новые численные модели гидродинамики турбомашин>>
 \end{itemize}
 \\
 \else
