--- a/avalur_cv.tex
+++ b/avalur_cv.tex
@@ -42,6 +42,19 @@
 \noindent {\textbf{Опыт работы}}
 \begin{longtable} {l | p{0.85\textwidth}}
 
+2013 — н.в. & {\textbf{\href{https://compscicenter.ru}{Яндекс, CS center/Школа анализа данных}, куратор академических программ}} \\
+\ifdetailed
+& \vspace{-1em}
+\begin{itemize}
+	\item в 2013 запустил филиал \href{https://yandexdataschool.ru}{ШАД} в Новосибирске. C 2016 по 2018 гг. в сумме 16 выпускников
+	\item в 2017 г в сотрудничестве с компанией JetBrains расширил филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}
+\end{itemize}
+\\
+\else
+& \vspace{-1em} {В 2013 запустил филиал ШАД в Новосибирске (с 2016 по 2018 гг. в сумме 16 выпускников). В 2017 в сотрудничестве с компанией Jetbrains расширил филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}.} \\
+\fi
+
+
 2015 — 2018 & {\textbf{\href{https://yandex.ru/sprav/main}{Яндекс.Справочник}, аналитик}} \\
 \ifdetailed
 & \vspace{-1em}
@@ -53,19 +66,6 @@
 \\
 \else
 & \vspace{-1em} {Дважды повысил точность организаций Справочника на 2\% и 3\%. Автоматизировал и оптимизировал процессы актуализации данных в колл-центрах и в Толоке. Работа в группе из 6 человек, разработка на Java, SQL, Python, немного С++; catboost.} \\
-\fi
-
-
-2013 — н.в. & {\textbf{\href{https://yandexdataschool.ru}{Яндекс, Школа анализа данных}, куратор академических программ}} \\
-\ifdetailed
-& \vspace{-1em}
-\begin{itemize}
-	\item запустил филиал ШАД в Новосибирске. C 2016 по 2018 гг. в сумме 16 выпускников
-	\item в 2017 г в сотрудничестве с компанией JetBrains расширил филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}
-\end{itemize}
-\\
-\else
-& \vspace{-1em} {В 2013 запустил филиал ШАД в Новосибирске (с 2016 по 2018 гг. в сумме 16 выпускников). В 2017 в сотрудничестве с компанией Jetbrains расширил филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}.} \\
 \fi
 
 
@@ -86,7 +86,7 @@
 \ifdetailed
 2008 — 2014 & {\href{http://sesc.nsu.ru}{СУНЦ НГУ}, преподаватель математики}\\
 2006 — 2017 & {организатор и член Жюри математических олимпиад: Всероссийская, Всесибирская, Турнир городов}\\
-2010 — н.в. & {\href{https://sites.google.com/site/sovenoknsk/}{мат. кружок Совёнок}, организатор и преподаватель}\\
+2010 — 2013 & {\href{https://sites.google.com/site/sovenoknsk/}{мат. кружок Совёнок}, организатор и преподаватель}\\
 \fi
 
 \end{longtable}
@@ -119,7 +119,7 @@
 \noindent {\textbf{Образование \vspace{-0.5em}}}
 \begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l} 
 2013 — 2016	& \href{https://yandexdataschool.ru/about/graduates/yearbook/2016}{Школа анализа данных, Яндекс} & программирование, машинное обучение & выпускник \vspace{0.5em}\\
-2009 — 2014	& \href{http://www.ict.nsc.ru/ru/education/postgraduate}{аспирантура ИВТ СО РАН} & мат.методы & к.ф.-м.н \vspace{0.5em}\\
+2009 — 2014	& \href{http://www.ict.nsc.ru/ru/education/postgraduate}{аспирантура ИВТ СО РАН} & мат. моделирование, численные методы & к.ф.-м.н \vspace{0.5em}\\
 2003 — 2009	& \href{}{НГУ, механико-математический факультет} & математика & магистр \vspace{0.5em}\\
 \end{longtable}
 
