--- a/avalur_cv.tex
+++ b/avalur_cv.tex
@@ -42,12 +42,20 @@
 \noindent {\textbf{Опыт работы}}
 \begin{longtable} {l | p{0.85\textwidth}}
 
+2019 — н.в. & {\textbf{\href{https://spbu.ru}{Санкт-Петербургский государственный университет}, ФМКН, доцент}} \\
+\ifdetailed
+& \vspace{-1em}
+\begin{itemize}
+	\item 2019 — в сотрудничестве с компанией Яндекс запустил образовательную программу бакалавриата «Математика, алгоритмы и анализ данных»
+\end{itemize}
+\\
+
 2013 — н.в. & {\textbf{\href{https://compscicenter.ru}{Яндекс, CS center/Школа анализа данных}, куратор академических программ}} \\
 \ifdetailed
 & \vspace{-1em}
 \begin{itemize}
-	\item в 2013 запустил филиал \href{https://yandexdataschool.ru}{ШАД} в Новосибирске. C 2016 по 2018 гг. в сумме 16 выпускников
-	\item в 2017 г в сотрудничестве с компанией JetBrains расширил филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}
+	\item 2013 — запустил филиал \href{https://yandexdataschool.ru}{ШАД} в Новосибирске. C 2016 по 2018 гг. в сумме 16 выпускников
+	\item в 2017 — в сотрудничестве с компанией JetBrains расширил филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}
 \end{itemize}
 \\
 \else
