English version and minor fixes

--- a/avalur_cv.tex
+++ b/avalur_cv.tex
@@ -32,7 +32,7 @@
 
 \vspace{0.5em}
 
-\noindent Новосибирск, Россия $\bullet$ \href{mailto:ovalur@gmail.com}{ovalur@gmail.com} \faMobile~+7 913 718 53 78 \faSendO~ovalur
+\noindent Санкт-Петербург, Россия $\bullet$ \href{mailto:ovalur@gmail.com}{ovalur@gmail.com} \faMobile~+7 913 718 53 78 \faSendO~ovalur
 % \faGithub
 
 \vspace{0.5em}
@@ -46,9 +46,16 @@
 \ifdetailed
 & \vspace{-1em}
 \begin{itemize}
-	\item 2019 — в сотрудничестве с компанией Яндекс запустил образовательную программу бакалавриата «Математика, алгоритмы и анализ данных»
+	\item 2019 — в сотрудничестве с компанией Яндекс запустил образовательную программу бакалавриата <<Математика, алгоритмы и анализ данных>>
 \end{itemize}
 \\
+\else
+& \vspace{-1em}
+\begin{itemize}
+	\item 2019 — в сотрудничестве с компанией Яндекс запустил образовательную программу бакалавриата <<Математика, алгоритмы и анализ данных>>
+\end{itemize}
+\\
+\fi
 
 2013 — н.в. & {\textbf{\href{https://compscicenter.ru}{Яндекс, CS center/Школа анализа данных}, куратор академических программ}} \\
 \ifdetailed
@@ -59,7 +66,8 @@
 \end{itemize}
 \\
 \else
-& \vspace{-1em} {В 2013 запустил филиал ШАД в Новосибирске (с 2016 по 2018 гг. в сумме 16 выпускников). В 2017 в сотрудничестве с компанией Jetbrains расширил филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}.} \\
+& {В 2013 запустил филиал ШАД в Новосибирске (с 2016 по 2018 гг. в сумме 16 выпускников). В 2017 в сотрудничестве с компанией Jetbrains расширил филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}.} \\
+\\
 \fi
 
 
@@ -73,7 +81,8 @@
 \end{itemize}
 \\
 \else
-& \vspace{-1em} {Дважды повысил точность организаций Справочника на 2\% и 3\%. Автоматизировал и оптимизировал процессы актуализации данных в колл-центрах и в Толоке. Работа в группе из 6 человек, разработка на Java, SQL, Python, немного С++; catboost.} \\
+& {Дважды повысил точность организаций Справочника на 2\% и 3\%. Автоматизировал и оптимизировал процессы актуализации данных в колл-центрах и в Толоке. Работа в группе из 6 человек, разработка на Java, SQL, Python, немного С++; catboost.} \\
+\\
 \fi
 
 
@@ -88,7 +97,8 @@
 \end{itemize}
 \\
 \else
-& \vspace{-1em} {Разработал новую численную модель, учитывающую изменение геометрии проточного тракта во времени. Ускорил расчеты имеющимся в лаборатории комплексом программ на языке Fortran в 16 раз (MPI по блокам), и ещё в 7 раз (OpenMP-потоки внутри блока). Защитил кандидатскую диссертацию.} \\
+& {Разработал новую численную модель, учитывающую изменение геометрии проточного тракта во времени. Ускорил расчеты имеющимся в лаборатории комплексом программ на языке Fortran в 16 раз (MPI по блокам), и ещё в 7 раз (OpenMP-потоки внутри блока). Защитил кандидатскую диссертацию.} \\
+\\
 \fi
 
 \ifdetailed
@@ -128,7 +138,7 @@
 \begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l} 
 2013 — 2016	& \href{https://yandexdataschool.ru/about/graduates/yearbook/2016}{Школа анализа данных, Яндекс} & программирование, машинное обучение & выпускник \vspace{0.5em}\\
 2009 — 2014	& \href{http://www.ict.nsc.ru/ru/education/postgraduate}{аспирантура ИВТ СО РАН} & мат. моделирование, численные методы & к.ф.-м.н \vspace{0.5em}\\
-2003 — 2009	& \href{}{НГУ, механико-математический факультет} & математика & магистр \vspace{0.5em}\\
+2003 — 2009	& \href{https://www.nsu.ru/n/mathematics-mechanics-department/}{НГУ, механико-математический факультет} & математика & магистр \vspace{0.5em}\\
 \end{longtable}
 
 \noindent {\textbf{Курсы \vspace{-0.5em}}}
