Decrypted some abbreviations

--- a/avalur_cv.tex
+++ b/avalur_cv.tex
@@ -42,7 +42,7 @@
 \noindent {\textbf{Опыт работы}}
 \begin{longtable} {l | p{0.85\textwidth}}
 
-2019 — н.в. & {\textbf{\href{https://spbu.ru}{Санкт-Петербургский государственный университет}, ФМКН, доцент}} \\
+2019 — н.в. & {\textbf{\href{https://spbu.ru}{Санкт-Петербургский государственный университет}, Факультет математики и компьютерных наук, доцент}} \\
 \ifdetailed
 & \vspace{-1em}
 \begin{itemize}
@@ -102,7 +102,7 @@
 \fi
 
 \ifdetailed
-2008 — 2014 & {\href{http://sesc.nsu.ru}{СУНЦ НГУ}, преподаватель математики}\\
+2008 — 2014 & {\href{http://sesc.nsu.ru}{Специализированный учебно-научный центр НГУ}, преподаватель математики}\\
 2006 — 2017 & {организатор и член Жюри математических олимпиад: Всероссийская, Всесибирская, Турнир городов}\\
 2010 — 2013 & {\href{https://sites.google.com/site/sovenoknsk/}{мат. кружок Совёнок}, организатор и преподаватель}\\
 \fi
@@ -112,7 +112,7 @@
 \ifdetailed
 \noindent {\textbf{Навыки}}
 \begin{longtable} {p{0.5\textwidth}p{0.5\textwidth}}
-\vspace{-2em}
+\vspace{-2.2em}
 \begin{itemize}
 	\item Python (numpy, scikit-learn, matplotlib)
 	\item Java (spring, hibernate, immutables)
@@ -120,7 +120,7 @@
 	\item SQL, MapReduce, MPI, OpenMP
 \end{itemize}
 & 
-\vspace{-2em}
+\vspace{-2.2em}
 \begin{itemize}
 	\item machine learning (catboost, SVM, RF)
 	\item алгоритмы, структуры данных
@@ -131,7 +131,7 @@
 \end{longtable}
 \fi
 
-\vspace{-2em}
+\vspace{-2.5em}
 
 \ifdetailed
 \noindent {\textbf{Образование \vspace{-0.5em}}}
