--- a/avalur_cv_en.tex
+++ b/avalur_cv_en.tex
@@ -102,7 +102,7 @@
 \fi
 
 \ifdetailed
-2008 — 2014 & {\href{http://sesc.nsu.ru}{SESC NSU}, math teacher}\\
+2008 — 2014 & {\href{http://sesc.nsu.ru}{Specialized Educational and Scientific Center NSU}, math teacher}\\
 2006 — 2017 & {organizer and member of the Jury of Mathematical Olympiads: All-Russian, All-Siberian, Tournament of cities}\\
 2010 — 2013 & {\href{https://sites.google.com/site/sovenoknsk/}{math club <<Sovenok>>}, organizer and teacher}\\
 \fi
