Rename SDS to Yandex Data School, add pdfs to repo

--- a/avalur_cv_en.tex
+++ b/avalur_cv_en.tex
@@ -57,16 +57,16 @@
 \\
 \fi
 
-2013 — present & {\textbf{\href{https://compscicenter.ru}{Yandex, CS center/School of Data Science}, Academic Program Manager}} \\
+2013 — present & {\textbf{\href{https://compscicenter.ru}{Yandex, CS center/School of Data Science}, Academic Programs Manager}} \\
 \ifdetailed
 & \vspace{-1em}
 \begin{itemize}
-	\item 2013 — launched a branch \href{https://yandexdataschool.ru}{SDS} in Novosibirsk. From 2016 to 2018 a total of 16 graduates
-	\item 2017 — in cooperation with JetBrains, expanded the SDS branch to \href{https://compscicenter.ru}{Computer science center}
+	\item 2013 — launched a branch \href{https://yandexdataschool.ru}{Yandex Data School} in Novosibirsk. From 2016 to 2018 a total of 16 graduates
+	\item 2017 — in cooperation with JetBrains, expanded the Yandex Data School branch to \href{https://compscicenter.ru}{Computer science center}
 \end{itemize}
 \\
 \else
-& {In 2013 launched a branch \href{https://yandexdataschool.ru}{SDS} in Novosibirsk. From 2016 to 2018 a total of 16 graduates. In 2017 in cooperation with JetBrains, expanded the SDS branch to \href{https://compscicenter.ru}{Computer science center}.} \\
+& {In 2013 launched a branch \href{https://yandexdataschool.ru}{Yandex Data School} in Novosibirsk. From 2016 to 2018 a total of 16 graduates. In 2017 in cooperation with JetBrains, expanded the Yandex Data School branch to \href{https://compscicenter.ru}{Computer science center}.} \\
 \\
 \fi
 
