update Yandex Data School and urls

--- a/avalur_cv_en.tex
+++ b/avalur_cv_en.tex
@@ -57,7 +57,7 @@
 \\
 \fi
 
-2013 — present & {\textbf{\href{https://compscicenter.ru}{Yandex, CS center/School of Data Science}, Academic Programs Manager}} \\
+2013 — present & {\textbf{\href{https://compscicenter.ru}{Yandex, CS center/Yandex Data School}, Academic Programs Manager}} \\
 \ifdetailed
 & \vspace{-1em}
 \begin{itemize}
@@ -136,9 +136,9 @@
 \ifdetailed
 \noindent {\textbf{Education \vspace{-0.5em}}}
 \begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l} 
-2013 — 2016	& \href{https://yandexdataschool.ru/about/graduates/yearbook/2016}{School of Data Science, Yandex} & programming, machine learning & graduate \vspace{0.5em}\\
+2013 — 2016	& \href{https://yandexdataschool.ru}{Yandex Data School} & machine learning, programming & graduate \vspace{0.5em}\\
 2009 — 2014	& \href{http://www.ict.nsc.ru/ru/education/postgraduate}{Graduate School of ICT SB RAS} & math modeling, numerical methods & PhD \vspace{0.5em}\\
-2003 — 2009	& \href{https://www.nsu.ru/n/mathematics-mechanics-department/}{NSU, Department of Mechanics and Mathematics} & math & master \vspace{0.5em}\\
+2003 — 2009	& \href{https://www.nsu.ru/n/mathematics-mechanics-department}{NSU, Department of Mechanics and Mathematics} & math & master \vspace{0.5em}\\
 \end{longtable}
 
 \vspace{2em}
