--- a/avalur_cv.tex
+++ b/avalur_cv.tex
@@ -136,7 +136,7 @@
 \ifdetailed
 \noindent {\textbf{Образование \vspace{-0.5em}}}
 \begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l} 
-2013 — 2016	& \href{https://yandexdataschool.ru/about/graduates/yearbook/2016}{Школа анализа данных, Яндекс} & программирование, машинное обучение & выпускник \vspace{0.5em}\\
+2013 — 2016	& \href{https://yandexdataschool.ru}{Школа анализа данных, Яндекс} & программирование, машинное обучение & выпускник \vspace{0.5em}\\
 2009 — 2014	& \href{http://www.ict.nsc.ru/ru/education/postgraduate}{аспирантура ИВТ СО РАН} & мат. моделирование, численные методы & к.ф.-м.н \vspace{0.5em}\\
 2003 — 2009	& \href{https://www.nsu.ru/n/mathematics-mechanics-department/}{НГУ, механико-математический факультет} & математика & магистр \vspace{0.5em}\\
 \end{longtable}
