--- a/avalur_cv.tex
+++ b/avalur_cv.tex
@@ -19,7 +19,7 @@
 
 % для полной версии резюме — detailedtrue, для сокращенной — detailedfalse
 \detailedtrue
-%\detailedfalse
+% \detailedfalse
 
 \ifdetailed
 % в полной версии много букв, поэтому поплотнее
@@ -46,14 +46,27 @@
 \ifdetailed
 & \vspace{-1em}
 \begin{itemize}
-	\item 2019 — в сотрудничестве с компанией Яндекс запустил образовательную программу бакалавриата <<Математика, алгоритмы и анализ данных>>
+	\item 2019 — руководитель новой образовательной программы бакалавриата \href{https://maad.compscicenter.ru}{<<Науки о данных>>} (до 2021 — <<Математика, алгоритмы и анализ данных>>), созданной в сотрудничестве с Яндексом на факультете математики и компьютерных наук СПбГУ.
+
+	Программа сочетает фундаментальное математическое образование с изучением современного программирования и машинного обучения. Студентам предлагаются темы научных исследований, связанные с разработками ведущих компаний в области информационных технологий. Она сразу стала популярной среди мотивированных абитуриентов: в 2019 году конкурс был около 25 человек на место, все бюджетные места заполняются победителями и призёрами олимпиад по математике и информатике, включая заключительный этап Всероссийской олимпиады школьников и международную олимпиаду по математике (IMO).
+
+	\item 2019-2020 — создал с нуля на грант министерства образования РФ \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{Международный научно-методический центр СПбГУ}
+
+	В 2019-2020 годах руководил командой факультета математики и компьютерных наук в совместном с институтом «Высшая школа менеджмента» СПбГУ проекте Международного научно-методического центра СПбГУ (МНМЦ).
+
+	Концепция МНМЦ заключается в создании и реализации передовых программ повышения квалификации и переподготовки преподавателей, учебно-методических материалов, активному включению лучших российских и зарубежных экспертов на всех этапах работы и, как следствие, формированию, поддержке и развитию профессионального сообщества преподавателей университетов.
+
+	Всего к реализации проекта было привлечено 123 человека, среди которых 61 кандидат наук или PhD (50\%) и 24 доктора наук (20\%). Команда проекта не только успешно справилась с возникшими в условиях пандемии COVID-19 вызовами, быстро перестроившись и выполнив запланированное, но и обернула их на пользу проекту, осуществив интенсивное обучение научно-педагогических работников и аспирантов российских образовательных организаций со всей страны.
+
+	За 2020 год в рамках МНМЦ было проведено две программы повышения квалификации, две программы стажировки, одна программа профессиональной переподготовки и одна школа по математике и компьютерным наукам для преподавателей университетов Российской Федерации. Всего на мероприятиях МНМЦ прошли обучение более 1500 человек из более чем 50 городов и 60 вузов России. Мероприятия получили теплый отклик сообщества, а выпускники центра с удовольствием используют полученные знания и методические материалы в своей работе.
+
+    \item 2020-2021 — соруководитель и преподаватель традиционной \href{https://sochisirius.ru/obuchenie/nauka/smena747/3603}{<<Январской научной школы по математике и программированию>>}
+
+	\item 2021 — все бюджетные места программы <<Науки о данных>> заполняются олимпиадниками-всеросами, включая двух победителей международной олимпиады по математике 
 \end{itemize}
 \\
 \else
-& \vspace{-1em}
-\begin{itemize}
-	\item 2019 — в сотрудничестве с компанией Яндекс запустил образовательную программу бакалавриата <<Математика, алгоритмы и анализ данных>>
-\end{itemize}
+& {В 2019 запустил образовательную программу бакалавриата \href{https://maad.compscicenter.ru}{<<Науки о данных>>}, сразу ставшей популярной среди самых лучших абитуриентов России. В 2020 создал с нуля на грант министерства образования РФ \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{Международный научно-методический центр СПбГУ}. Читаю \href{https://github.com/spbu-math-cs/ml-course-2021/}{годовой курс по машинному обучению} и провожу традиционные \href{https://sochisirius.ru/obuchenie/nauka/smena747/3603}{смены в Сириусе}.} \\
 \\
 \fi
 
@@ -62,29 +75,28 @@
 & \vspace{-1em}
 \begin{itemize}
 	\item 2013 — запустил филиал \href{https://yandexdataschool.ru}{ШАД} в Новосибирске. C 2016 по 2018 гг. в сумме 16 выпускников
-	\item в 2017 — в сотрудничестве с компанией JetBrains расширил филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}
+	\item 2017 — в сотрудничестве с компанией JetBrains расширил филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}
+	\item 2019 — руководитель и преподаватель на \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Интенсивном проектном практикуме для разработчиков от Сириуса, Яндекса и ФКН ВШЭ>>} 
 \end{itemize}
 \\
 \else
-& {В 2013 запустил филиал ШАД в Новосибирске (с 2016 по 2018 гг. в сумме 16 выпускников). В 2017 в сотрудничестве с компанией Jetbrains расширил филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}.} \\
+& {В 2013 запустил филиал ШАД в Новосибирске (с 2016 по 2018 гг. в сумме 16 выпускников). В 2017 в сотрудничестве с компанией Jetbrains расширил филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}. В 2019 провел \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Интенсивный проектный практикум для разработчиков от Сириуса, Яндекса и ФКН ВШЭ>>}} \\
 \\
 \fi
 
-
-2015 — 2018 & {\textbf{\href{https://yandex.ru/sprav/main}{Яндекс.Справочник}, аналитик}} \\
+2015 — 2018 & {\textbf{\href{https://yandex.ru/}{Яндекс}, аналитик}} \\
 \ifdetailed
 & \vspace{-1em}
 \begin{itemize}
 	\item реализовал ежедневный расчет поатрибутной (публикуемость, название, адрес, время работы...) метрики точности базы организаций Яндекса
 	\item автоматизировал и оптимизировал процессы актуализации данных в колл-центрах и в \href{https://toloka.yandex.ru}{Яндекс.Толоке}. В частности, на 20\% улучшил эффективность актуализации, применив catboost для предсказания вероятности закрытия организации
-	\item дважды повысил точность организаций Справочника на 2\% и 3\%, выделив из потерь наиболее крупные проблемы и исправив их. Во-первых, исправив компании с недоступными телефонами. Во-вторых, повысив точность времени работы организаций их приоритетной актуализацией
+	\item дважды повысил точность организаций Справочника на 2\% и 3\%, выделив из потерь наиболее крупные проблемы и исправив их: процесс обхода компаний с недоступными телефонами; повышение точности времени работы организаций их приоритетной актуализацией операторами колл-центров
 \end{itemize}
 \\
 \else
 & {Дважды повысил точность организаций Справочника на 2\% и 3\%. Автоматизировал и оптимизировал процессы актуализации данных в колл-центрах и в Толоке. Работа в группе из 6 человек, разработка на Java, SQL, Python, немного С++; catboost.} \\
 \\
 \fi
-
 
 2009 — 2015 & {\textbf{\href{http://www.ict.nsc.ru}{Институт вычислительных технологий СО РАН}, аспирант, научный сотрудник}}\\
 \ifdetailed
@@ -93,11 +105,11 @@
 	\item обобщил на нестационарную геометрию метод решения трехмерных уравнений Рейнольдса движения несжимаемой жидкости
 	\item ускорил расчеты в 16 раз, распараллелив алгоритм по блокам расчетной области с использованием MPI для процессов с распределенной памятью (улучшение имеющегося в лаборатории комплекса программ на языке Fortran, $\sim$30 тыс. строк кода)
 	\item ускорил ещё в 7 раз, распараллелив алгоритм в одном блоке с использованием OpenMP-потоков с общей памятью
-	\item опубликовал 19 научных работ (4 статьи, 13 тезисов, 2 патента), защитив в итоге кандидатскую <<Новые численные модели гидродинамики турбомашин>>
+	\item опубликовал 19 научных работ (4 статьи, 13 тезисов, 2 патента), защитив в итоге \href{https://github.com/avalur/dissertation/blob/master/to_print/autoref_Avdyushenko.pdf}{кандидатскую диссертацию <<Новые численные модели гидродинамики турбомашин>>}
 \end{itemize}
 \\
 \else
-& {Разработал новую численную модель, учитывающую изменение геометрии проточного тракта во времени. Ускорил расчеты имеющимся в лаборатории комплексом программ на языке Fortran в 16 раз (MPI по блокам), и ещё в 7 раз (OpenMP-потоки внутри блока). Защитил кандидатскую диссертацию.} \\
+& {Разработал новую численную модель, учитывающую изменение во времени геометрии проточного тракта гидротурбины. Ускорил расчеты имеющимся в лаборатории комплексом программ на языке Fortran в 16 раз (MPI по блокам), и ещё в 7 раз (OpenMP-потоки внутри блока). Защитил \href{https://github.com/avalur/dissertation/blob/master/to_print/autoref_Avdyushenko.pdf}{кандидатскую диссертацию <<Новые численные модели гидродинамики турбомашин>>}.} \\
 \\
 \fi
 
@@ -122,18 +134,17 @@
 & 
 \vspace{-2.2em}
 \begin{itemize}
-	\item machine learning (catboost, SVM, RF)
+	\item machine learning (catboost, SVM)
 	\item алгоритмы, структуры данных
-	\item математика (матстат, анализ, алгебра)
+	\item математика (анализ, численные методы)
 	\item русский: родной, английский: intermediate, французский: débutant
 \end{itemize}
 \\
 \end{longtable}
 \fi
 
-\vspace{-2.5em}
+\vspace{-0.5em}
 
-\ifdetailed
 \noindent {\textbf{Образование \vspace{-0.5em}}}
 \begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l} 
 2013 — 2016	& \href{https://yandexdataschool.ru}{Школа анализа данных, Яндекс} & программирование, машинное обучение & выпускник \vspace{0.5em}\\
@@ -141,10 +152,16 @@
 2003 — 2009	& \href{https://www.nsu.ru/n/mathematics-mechanics-department/}{НГУ, механико-математический факультет} & математика & магистр \vspace{0.5em}\\
 \end{longtable}
 
-\noindent {\textbf{Курсы \vspace{-0.5em}}}
+\ifdetailed
+\noindent {\textbf{Онлайн-курсы \vspace{-0.5em}}}
 \begin{longtable} {cp{0.35\textwidth}p{0.38\textwidth}l} 
-2017	& Coursera, University of Washington & Programming Languages, parts A, B, C & 	сертификат \vspace{0.5em}\\
+2017 & Coursera, University of Washington & Programming Languages, parts A, B, C & 	сертификат \vspace{0.5em}\\
+2019 & Coursera, HSE University & How to Win a Data Science Competition: Learn from Top Kagglers & сертификат \vspace{0.5em}\\
 \end{longtable}
 \fi
+
+\noindent {\textbf{Вне работы}}
+
+Люблю проводить время с женой и дочкой, стараюсь по возможности регулярно заниматься спортом (бег, скалолазание), есть в \href{https://www.instagram.com/ovalur/}{Insragram}
 
 \end{document}             % End of document.
