--- a/avalur_cv.tex
+++ b/avalur_cv.tex
@@ -37,14 +37,13 @@
 
 \vspace{0.5em}
 \hrule
-\vspace{1.0em}
+\vspace{0.5em}
 
 \noindent {\textbf{Опыт работы}}
 \begin{longtable} {l | p{0.85\textwidth}}
-
 2019 — н.в. & {\textbf{\href{https://spbu.ru}{Санкт-Петербургский государственный университет}, Факультет математики и компьютерных наук, доцент}} \\
 \ifdetailed
-& \vspace{-1em}
+&
 \begin{itemize}
 	\item 2019 — руководитель новой образовательной программы бакалавриата \href{https://maad.compscicenter.ru}{<<Науки о данных>>} (до 2021 — <<Математика, алгоритмы и анализ данных>>), созданной в сотрудничестве с Яндексом на факультете математики и компьютерных наук СПбГУ.
 
@@ -69,24 +68,26 @@
 & {В 2019 запустил образовательную программу бакалавриата \href{https://maad.compscicenter.ru}{<<Науки о данных>>}, сразу ставшей популярной среди самых лучших абитуриентов России. В 2020 создал с нуля на грант министерства образования РФ \href{https://gsom.spbu.ru/all_news/event2021-02-04/}{Международный научно-методический центр СПбГУ}. Читаю \href{https://github.com/spbu-math-cs/ml-course-2021/}{годовой курс по машинному обучению} и провожу традиционные \href{https://sochisirius.ru/obuchenie/nauka/smena747/3603}{смены в Сириусе}.} \\
 \\
 \fi
-
+\\
 2013 — н.в. & {\textbf{\href{https://compscicenter.ru}{Яндекс, CS center/Школа анализа данных}, куратор академических программ}} \\
 \ifdetailed
-& \vspace{-1em}
+&
 \begin{itemize}
 	\item 2013 — запустил филиал \href{https://yandexdataschool.ru}{ШАД} в Новосибирске. C 2016 по 2018 гг. в сумме 16 выпускников
 	\item 2017 — в сотрудничестве с компанией JetBrains расширил филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}
 	\item 2019 — руководитель и преподаватель на \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Интенсивном проектном практикуме для разработчиков от Сириуса, Яндекса и ФКН ВШЭ>>} 
-\end{itemize}
-\\
+\end{itemize} \\
 \else
 & {В 2013 запустил филиал ШАД в Новосибирске (с 2016 по 2018 гг. в сумме 16 выпускников). В 2017 в сотрудничестве с компанией Jetbrains расширил филиал ШАДа до \href{https://compscicenter.ru}{Computer science center}. В 2019 провел \href{https://sochisirius.ru/obuchenie/graduates/smena240/1174}{<<Интенсивный проектный практикум для разработчиков от Сириуса, Яндекса и ФКН ВШЭ>>}} \\
 \\
 \fi
-
+\end{longtable}
+\newpage
+\begin{longtable} {l | p{0.85\textwidth}}
+\\
 2015 — 2018 & {\textbf{\href{https://yandex.ru/}{Яндекс}, аналитик}} \\
 \ifdetailed
-& \vspace{-1em}
+&
 \begin{itemize}
 	\item реализовал ежедневный расчет поатрибутной (публикуемость, название, адрес, время работы...) метрики точности базы организаций Яндекса
 	\item автоматизировал и оптимизировал процессы актуализации данных в колл-центрах и в \href{https://toloka.yandex.ru}{Яндекс.Толоке}. В частности, на 20\% улучшил эффективность актуализации, применив catboost для предсказания вероятности закрытия организации
@@ -100,7 +101,7 @@
 
 2009 — 2015 & {\textbf{\href{http://www.ict.nsc.ru}{Институт вычислительных технологий СО РАН}, аспирант, научный сотрудник}}\\
 \ifdetailed
-& \vspace{-1em}
+&
 \begin{itemize}
 	\item обобщил на нестационарную геометрию метод решения трехмерных уравнений Рейнольдса движения несжимаемой жидкости
 	\item ускорил расчеты в 16 раз, распараллелив алгоритм по блокам расчетной области с использованием MPI для процессов с распределенной памятью (улучшение имеющегося в лаборатории комплекса программ на языке Fortran, $\sim$30 тыс. строк кода)
